# FactoryModel

./: .gitignore  CMakeLists.txt  README.md
examples/: bad_count.txt  bad_letter.txt  bad_range.txt  bad_type.txt  example1.txt  example3_one_machine.txt  gen_stress.py  m2n2_two_items.txt  m3n1_pipeline.txt  m3n3_three_machines.txt  stress.txt
src/: LogWriter.h  Parser.cpp  Parser.h  Simulator.cpp  Simulator.h  main.cpp
tests/: test_helpers.hpp  test_parser.cpp  test_paths.hpp.in  test_simulator.cpp
